@@ -1,5 +1,7 @@
 js8py (0.2.0) UNRELEASED; urgency=low
 
+  * structured callsign data
+
  -- Jakob Ketterl <jakob.ketterl@gmx.de>  Sun, 31 May 2020 13:52:00 +0000
 
 js8py (0.1.2) bullseye jammy; urgency=low
